Bug 468967 - User completion or emoji picker do not show up
Summary: User completion or emoji picker do not show up
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: HI major
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2023-04-25 20:18 UTC by Marc Deop
Modified: 2023-05-12 17:12 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marc Deop 2023-04-25 20:18:08 UTC
I used to be able to type @[some letters] and a user list would show up.
Same way I used to be able to type :[some letters] and the emoji picker would show up


STEPS TO REPRODUCE
1. type @ followed by some letters
or
1. type : followed by some letters
 

OBSERVED RESULT
Nothing happens

EXPECTED RESULT
A user list picker shows up
or
An emoji picker shows up

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora 37
KDE Plasma Version: 5.27.4
KDE Frameworks Version: 5.105.0
Qt Version: 5.15.9

ADDITIONAL INFORMATION
Neochat and libquotient built from master in my COPR https://copr.fedorainfracloud.org/coprs/marcdeop/neochat-git/
Comment 1 Nate Graham 2023-04-26 17:11:51 UTC
Can confirm.
Comment 2 Bug Janitor Service 2023-05-11 08:55:49 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/988
Comment 4 Tobias Fella 2023-05-12 17:12:54 UTC
Git commit afb51497cd76873a48b7402271dcae49f04f6c7c by Tobias Fella.
Committed on 12/05/2023 at 17:12.
Pushed by tfella into branch 'master'.

Fix autocompletion not working

M  +1    -1    src/chatdocumenthandler.h

https://invent.kde.org/network/neochat/commit/afb51497cd76873a48b7402271dcae49f04f6c7c