Fix autocompletion not working

BUG: 468967